# NemoReconstruct

./: .gitignore  Makefile  README.md
backend/: export_openapi.py  requirements.txt
backend/app/: main.py  models.py  schemas.py
backend/app/api/: reconstructions.py  workflows.py
backend/app/core/: config.py  database.py
backend/app/services/: convert_ply_to_usdz.py  generate_collision_mesh.py  pipeline.py  storage.py  tsdf_fusion.py
backend/app/workers/: runner.py
docs/: LIMITATIONS.md  NEMOCLAW_SETUP.md  openapi.json
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ReconstructionDashboard.tsx
frontend/src/lib/: api.ts  types.ts
nemoclaw/: NEMOCLAW_SETUP.md  README.md  agent-prompt.md  evaluator_prompt.md  example_session.py  extract_agent_output.py  nemoclaw_config.yaml  orchestrate.sh  runner_prompt.md  sandbox-openclaw-evaluator.json  sandbox-openclaw-template.json  sandbox-openclaw.json  sandbox-policy-template.yaml  sandbox-policy.yaml  system_prompt.md
nemoclaw/archive/: orchestrate.sh.bak  sandbox-openclaw-template.json  sandbox-openclaw.json  sandbox-policy-template.yaml
sdk/python/: pyproject.toml
sdk/python/nemo_reconstruct_client/: __init__.py  client.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
