[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemo-reconstruct-client"
version = "0.1.0"
description = "Python SDK for NemoReconstruct"
requires-python = ">=3.10"
dependencies = ["requests>=2.32.0"]

[tool.setuptools.packages.find]
where = ["."]
